# copilot-cli-custom-proxy

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/changelogs/: v0.4.0.md  v0.4.1.md
proxy-core/: Cargo.toml
proxy-core/examples/: demo.rs
proxy-core/src/: atomic_io.rs  claude.rs  config.rs  lib.rs  models.rs  proxy.rs  settings.rs  state.rs  ui_state.rs
proxy-core/tests/: proxy_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config_resolve.rs  lifecycle.rs  main.rs  startup_error.rs  tray.rs
src-tauri/webview-tests/: validation.test.js
