[workspace]
resolver = "2"
members = ["proxy-core", "src-tauri"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Michał Kamiński (https://github.com/numikel)"]
repository = "https://github.com/numikel/copilot-cli-custom-proxy"
homepage = "https://github.com/numikel/copilot-cli-custom-proxy"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
secrecy = "0.10"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
