[package]
name = "copilot-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local proxy for GitHub Copilot CLI with in-tray model switching"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
proxy-core = { path = "../proxy-core" }
tauri = { version = "2", features = ["tray-icon"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
