[package]
name = "copilot-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Windows tray app that live-swaps the LLM model for GitHub Copilot CLI and Codex CLI via a local OpenAI-compatible proxy."
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
proxy-core = { path = "../proxy-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
